--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "description": "",
-  "homepage": "http://zhendryk.github.io/",
+  "homepage": "https://zhendryk.github.io/",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
